test/src/e2e_vm_tests/test_programs/should_fail/invalid_fully_qualified_type/src/foo.sw
library foo;

enum Foo {
  A: (),
  B: (),
}
